<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#393939">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#333333">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="5dp"
                    android:text="@string/registration_details"
                    style="@style/FlatButton"/>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/input_vehicle_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:hint="@string/veh_number"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/input_vehicle_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:hint="@string/vehicle_type"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/input_driver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:hint="@string/driver_name"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|left">

                    <EditText
                        android:id="@+id/input_driver_phone_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@string/mobile_number"
                        android:inputType="phone" />

                    <ImageView
                        android:id="@+id/check_img"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/ic_check_black_24dp"
                        android:tint="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/verify_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/verify"
                        android:textColor="@color/colorAccent"
                        android:textAllCaps="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp">

                    <CheckBox
                        android:id="@+id/terms_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textStyle="italic"
                        android:text="I accept the "/>

                    <TextView
                        android:id="@+id/terms_open_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/terms_and_conditions"/>


                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/dialog_footer"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#333333">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dialog_register_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/register"
                        style="@style/FlatButton"/>

                    <Button
                        android:id="@+id/dialog_cancel_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/cancel"
                        style="@style/FlatButton"/>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
