<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#393939">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#333333">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="5dp"
                    android:text="@string/one_time_password"
                    style="@style/FlatButton"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/status_tv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:textStyle="italic"
                        android:text="@string/waiting"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/otp_tv"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/otp_edit_text"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>

            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#333333">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/resend_btn"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/resend"
                        style="@style/FlatButton"/>

                    <Button
                        android:id="@+id/verify_btn"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/verify"
                        style="@style/FlatButton"/>

                    <Button
                        android:id="@+id/reenter_btn"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/reenter"
                        style="@style/FlatButton"/>

                    <Button
                        android:id="@+id/cancel_btn"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/cancel"
                        style="@style/FlatButton"/>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
