<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:title="@string/app_name">

    </android.support.v7.widget.Toolbar>

    <ImageButton
        android:id="@+id/vehicle_status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/unloaded"
        />

    <TextView
        android:id="@+id/vehicle_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorTextIcon"
        android:textSize="24sp"
        android:text="@string/unloaded"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                    <ImageButton
                        android:id="@+id/btn_unloaded"
                        android:background="@color/truck_btn_enabled"
                        android:alpha="1.0"
                        android:src="@drawable/unloaded"
                        style="@style/StatusButton"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/btn_unloaded"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/unloaded"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                    <ImageButton
                        android:id="@+id/btn_loading"
                        android:background="@color/truck_btn_disabled"
                        android:alpha="0.6"
                        android:src="@drawable/loading"
                        style="@style/StatusButton"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/btn_loading"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/loading"/>
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                    <ImageButton
                        android:id="@+id/btn_unloading"
                        android:background="@color/truck_btn_disabled"
                        android:alpha="0.6"
                        android:src="@drawable/unloading"
                        style="@style/StatusButton"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/btn_unloading"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/unloading"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                    <ImageButton
                        android:id="@+id/btn_loaded"
                        android:background="@color/truck_btn_disabled"
                        android:alpha="0.6"
                        android:src="@drawable/loaded"
                        style="@style/StatusButton"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/btn_loaded"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/loaded"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="160dp"
            android:layout_marginRight="160dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:tint="@color/truck_arrows"
            android:src="@drawable/arrows" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/vehicle_status_desc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/loading_desc"/>

        <LinearLayout
            android:id="@+id/btn_upload_pod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#33000000"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_upload_black_24dp"/>

            <TextView
                android:id="@+id/upload_pod_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload POD"
                android:textSize="12dp"
                android:textColor="#000000"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>