<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DriverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="#333333">

                    <TextView
                        android:id="@+id/document_dialog_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|left"
                        android:layout_marginLeft="5dp"
                        android:text="@string/proof_of_delivery"
                        style="@style/FlatButton"/>

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/document_dialog_upload_progress"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:visibility="invisible"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <include layout="@layout/image_layout" />

                        <ImageButton
                            android:id="@+id/document_file_view_btn"
                            style="@style/TransButton"
                            android:layout_margin="6dp"
                            android:src="@drawable/ic_launch_black_24dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="2dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true">

                            <ImageButton
                                android:id="@+id/document_file_camera_btn"
                                style="@style/TransButton"
                                android:layout_margin="4dp"
                                android:src="@drawable/ic_add_a_photo_black_24dp"/>

                            <ImageButton
                                android:id="@+id/document_file_gallery_btn"
                                style="@style/TransButton"
                                android:layout_margin="4dp"
                                android:src="@drawable/ic_photo_library_black_24dp"/>

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="#333333">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical|left">

                        <Button
                            android:id="@+id/document_dialog_cancel_btn"
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/cancel"
                            style="@style/FlatButton"/>

                        <Button
                            android:id="@+id/document_dialog_ok_btn"
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/ok"
                            style="@style/FlatButton"/>


                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>